<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".signupScreens.SignUpPasswords">

    <TextView
        android:id="@+id/appNameInPasswords"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/foobar_dt"
        android:textColor="#216EF3"
        android:textSize="35sp"
        app:layout_constraintBottom_toTopOf="@+id/LLforPasswords"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="6dp"
        android:text="@string/create_your_password"
        app:layout_constraintBottom_toTopOf="@+id/LLforPasswords"
        app:layout_constraintTop_toBottomOf="@+id/appNameInPasswords"/>

    <LinearLayout
        android:id="@+id/LLforPasswords"
        android:layout_width="410dp"
        android:layout_height="361dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="-1dp">

        <EditText
            android:id="@+id/newPWfield1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:background="@color/white"
            android:ems="10"
            android:hint="Enter password"
            android:inputType="textPassword"
            android:padding="10dp" />

        <TextView
            android:id="@+id/passwordInvalidMSG"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="5dp"
            android:text="@string/password_dosen_t_match_criteria"
            android:textColor="#F44336"
            android:visibility="invisible">

        </TextView>

        <EditText
            android:id="@+id/newPWfield2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:background="@color/white"
            android:ems="10"
            android:hint="@string/password_verification"
            android:inputType="textPassword"
            android:padding="10dp" />

        <TextView
            android:id="@+id/passwordDosentMatchMSG"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:gravity="center"
            android:textColor="#F44336"
            android:text="@string/passwords_don_t_match"
            android:visibility="invisible">

        </TextView>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="6dp"
            android:text="@string/password_must_be_at_least_8_characters_long"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="6dp"
            android:text="@string/password_must_contain_at_least_one_upper_case_and_lower_case_character"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="6dp"
            android:text="@string/password_must_contain_at_least_one_special_character"/>

    </LinearLayout>

    <Button
        android:id="@+id/createNewUserB"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="#214EF3"
        android:text="@string/create_new_user"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/LLforPasswords"
        app:layout_constraintVertical_bias="0.505"
        tools:layout_editor_absoluteX="29dp" />

    <ImageButton
        android:id="@+id/btnDark"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="5dp"
        android:background="#018BFA"
        android:src="@drawable/ic_dark_mode"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>