<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".signupScreens.SignUpScreen">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/join_foobar_dt"
        android:textColor="#214EF3"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/mainLLInEmail"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/EmailScreenContinue"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="#214EF3"
        android:text="@string/continuee"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mainLLInEmail"
        app:layout_constraintVertical_bias="0.505"
        tools:layout_editor_absoluteX="29dp" />

    <LinearLayout
        android:id="@+id/mainLLInEmail"
        android:layout_width="408dp"
        android:layout_height="410dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="1dp">


        <EditText
            android:id="@+id/newEmailfield"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:ems="10"
            android:hint="@string/enter_email"
            android:inputType="text"
            android:padding="10dp" />

        <TextView
            android:id="@+id/emptyEmailMSG"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:gravity="center"
            android:text="@string/email_should_not_be_empty"
            android:textColor="#F44336"
            android:visibility="invisible">

        </TextView>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/take_your_photo"/>

        <ImageButton
            android:id="@+id/cameraBtn"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:background="#FFF1DD"
            app:srcCompat="@android:drawable/ic_menu_camera" />

        <ImageButton
            android:id="@+id/galleryBtn"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_gravity="center"
            android:background="#FFF1DD"
            android:layout_marginBottom="10dp"
            app:srcCompat="@android:drawable/ic_menu_gallery" />

        <ImageView
            android:id="@+id/profileImage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="10dp"
            android:adjustViewBounds="true"
            android:maxHeight="300dp" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>