<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:theme="@style/Theme.Foobar_DT_ad"
    tools:context=".editScreens.EditNames">

    <TextView
        android:id="@+id/appNameInNames"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/change_your_name"
        android:textColor="#216EF3"
        android:textSize="35sp"
        android:fontFamily="serif"
        app:layout_constraintBottom_toTopOf="@+id/LLforNames"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tell_us_your_name"
        app:layout_constraintBottom_toTopOf="@+id/LLforNames"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appNameInNames">
    </TextView>

    <LinearLayout
        android:id="@+id/LLforNames"
        android:layout_width="412dp"
        android:layout_height="227dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <EditText
            android:id="@+id/firstNameField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:background="@color/white"
            android:ems="10"
            android:hint="@string/enter_first_name"
            android:inputType="text"
            android:padding="10dp" />

        <EditText
            android:id="@+id/lastNameField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:ems="10"
            android:hint="@string/enter_last_name"
            android:inputType="text"
            android:padding="10dp"
            tools:layout_editor_absoluteX="0dp"
            tools:layout_editor_absoluteY="115dp" />

    </LinearLayout>

    <Button
        android:id="@+id/continueNames"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="#214EF3"
        android:text="@string/continueing"
        app:layout_constraintBottom_toBottomOf="parent"

        app:layout_constraintTop_toBottomOf="@+id/LLforNames"
        app:layout_constraintVertical_bias="0.505"
        tools:layout_editor_absoluteX="29dp" />

    <ImageButton
        android:id="@+id/btnDark"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="5dp"
        android:background="#018BFA"
        android:src="@drawable/ic_dark_mode"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:tint="@color/dayC"
        app:backgroundTint="#214EF3"/>
</androidx.constraintlayout.widget.ConstraintLayout>